--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,34 @@
 ---
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
 ---
-
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="robots" content="none" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>"Databse Semestral Project"</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 <style is:global>
+	@font-face {
+		font-family: "Fira Code";
+		src: url("/fonts/firacode.ttf") format("truetype-variations");
+		font-weight: 400 500;
+		color: black;
+	}
+	@page {
+		size: a4 portrait;
+	}
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+		font-family: "Fira Code", monospace;
+		font-weight: 400;
+		font-size: 11pt;
 	}
 </style>
