--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,321 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "@layouts/Layout.astro";
+import Query from "@components/Query.astro";
+import queries from "@content/data/queries.yml";
+
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout>
 	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<h1>Ochrana živočichů</h1>
+		<div>
+			<h2>Popis</h2>
+			<p>
+				Světová organizace pro ochranu oceánů mapuje a chrání mořský život,
+				vyžaduje informace jako jméno každého zvířete, jeho stravu, ohroženost,
+				řád a latinský název. Monitorují zastoupení druhů v ekosystémech, aby
+				předešli nerovnováze a vydávají vyhlášky pro ohrožené druhy s uvedením
+				důvodů, jako je přelov nebo znečištění.
+			</p>
+			<p>
+				Organizace udržuje komplexní záznamy o zaměstnancích, včetně jmen,
+				národností, platů, adres a unikátního, neměnného osobního čísla každého
+				zaměstnance. Někteří zaměstnanci mají podřízené, zatímco místní pobočky
+				řeší detaily jako peněžní bonusy.
+			</p>
+			<p>
+				Pro získávání finančních prostředků organizace pořádá různé akce, včetně
+				plaveb lodí, potápění a pozorování velryb, často vedeno
+				zaměstnanci-průvodci, jejichž ID a bonusové platy jsou sledovány. Kromě
+				toho nabízejí symbolické adopce zvířat; zákazníci přispějí minimálně 500
+				Kč a obdrží certifikát a plyšovou hračku adoptovaného zvířete.
+			</p>
+		</div>
+		<div>
+			<h2>Konceptuální schéma</h2>
+			<img alt="Conceptual schema of database" src="conceptual_schema.png" />
+		</div>
+		<div>
+			<strong>V diagramu jsou dvě smyčky:</strong>
+			<ul>
+				<li>
+					<strong>Zaměstnanec-Zaměstnanec:</strong> To představuje vztah
+					nadřízeného a podřízeného. Může nastat situace, kdy zaměstnanec je
+					svým vlastním nadřízeným. Abychom toto řešili, zavádíme IO2.
+				</li>
+				<li>
+					<strong>Zaměstnanec-Průvodce-Akce-Zákazník-Adresa-Zaměstnanec:</strong
+					> Tato smyčka zahrnuje zaměstnance a zákazníka, kteří se současně
+					účastní (nebo neúčastní) akce a mají také nějakou adresu. To není
+					problém, protože se jedná o odlišné vazby.
+				</li>
+			</ul>
+		</div>
+		<div>
+			<h2>Relační schéma</h2>
+			<img alt="Relational schema of database" src="relational_schema.jpg" />
+		</div>
+		<h2>Dotazy</h2>
+		<ol id="queries">
+			{queries.map((item: any) => {
+					return <Query {...item}/>
+			})}
+		</ol>
+		<div>
+			<h2>SQL Statements Cover</h2>
+			<table>
+				<tr>
+					<th>Category</th>
+					<th>Category Statement Description</th>
+				</tr>
+				<tr>
+					<td>A</td>
+					<td
+						>Simple (positive) query with at least two joined tables (list of
+						patients - name, address who were examined by doctor Braun)</td
+					>
+				</tr>
+				<tr>
+					<td>B</td>
+					<td
+						>Simple (negative) query (list of patients - name, address who were
+						not visiting doctor Braun) (select all doctors who had patients,...)</td
+					>
+				</tr>
+				<tr>
+					<td>C</td>
+					<td
+						>Choose all records, which have relation for "X" only …(list of
+						patients - name, address who were examined by doctor Braun ONLY -
+						the patients didn't have visit at another doctor).</td
+					>
+				</tr>
+				<tr>
+					<td>D1</td>
+					<td
+						>Select all records which are at the relation with all.General
+						quantified query (list of doctors - name, address who were visited
+						by EACH patient, who visited doctor Braun)</td
+					>
+				</tr>
+				<tr>
+					<td>D2</td>
+					<td is:raw
+						>The result validity check from category D1. For example if query
+						{list of teachers, who had lecture during ALL semesters begin at
+						winter 2001/2002 till summer semester 2008/2008 included} shows the
+						teacher "123 Josef Pavlicek", so the validity check will be query
+						{{list of all semester at the season, where was teaching Pavlicek }\
+						(minus){list of all semester at the season}} and the result must be
+						empty.</td
+					>
+				</tr>
+				<tr>
+					<td>F1</td>
+					<td>join - JOIN ON</td>
+				</tr>
+				<tr>
+					<td>F2</td>
+					<td>NATURAL JOIN | JOIN USING</td>
+				</tr>
+				<tr>
+					<td>F3</td>
+					<td>CROSS JOIN</td>
+				</tr>
+				<tr>
+					<td>F4</td>
+					<td>LEFT | RIGHT OUTER JOIN</td>
+				</tr>
+				<tr>
+					<td>F5</td>
+					<td>FULL (OUTER) JOIN</td>
+				</tr>
+				<tr>
+					<td>G1</td>
+					<td>Subquery inside WHERE</td>
+				</tr>
+				<tr>
+					<td>G2</td>
+					<td>Subquery inside FROM</td>
+				</tr>
+				<tr>
+					<td>G3</td>
+					<td>Subquery inside SELECT</td>
+				</tr>
+				<tr>
+					<td>G4</td>
+					<td>Correlated subquery (EXISTS | NOT EXISTS)</td>
+				</tr>
+				<tr>
+					<td>H1</td>
+					<td>Set union query - UNION</td>
+				</tr>
+				<tr>
+					<td>H2</td>
+					<td>Set substraction query - EXCEPT or MINUS (v Oracle)</td>
+				</tr>
+				<tr>
+					<td>H3</td>
+					<td>Set intersection - INTERSECT</td>
+				</tr>
+				<tr>
+					<td>I1</td>
+					<td>Aggregation functions (count | sum | min | max| avg)</td>
+				</tr>
+				<tr>
+					<td>I2</td>
+					<td>Aggregations with GROUP BY (HAVING) clause</td>
+				</tr>
+				<tr>
+					<td>J</td>
+					<td>The same query using three different formulations in SQL</td>
+				</tr>
+				<tr>
+					<td>K</td>
+					<td
+						>All select clauses - SELECT FROM WHERE GROUP BY HAVING ORDER BY</td
+					>
+				</tr>
+				<tr>
+					<td>L</td>
+					<td>Make VIEW</td>
+				</tr>
+				<tr>
+					<td>M</td>
+					<td>View used query</td>
+				</tr>
+				<tr>
+					<td>N</td>
+					<td
+						>Insert statement for inserting list of records - INSERT without
+						clause VALUES use, for example ( add customer ID 6 all green boats
+						reservation for all needed time intervals)</td
+					>
+				</tr>
+				<tr>
+					<td>O</td>
+					<td>UPDATE statement with subquery in WHERE/SET</td>
+				</tr>
+				<tr>
+					<td>P</td>
+					<td>DELETE statement with subquery in WHERE clause</td>
+				</tr>
+			</table>
+		</div>
 	</main>
 </Layout>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
+<style is:global>
 	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
 		text-align: center;
-		margin-bottom: 1em;
 	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
+
+	strong {
+		font-size: 11pt;
 	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
+
+	body {
+		max-width: 900px;
+		margin: auto;
+		margin-bottom: 20vh;
+		margin-top: 160px;
 	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
+
+	body > * {
+		padding-left: 2vw;
+		padding-right: 2vw;
 	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
+
+	div {
+		display: flex;
+		flex-direction: column;
 	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
+
+	pre {
+		background-color: #ededed;
+		padding: 0.6em;
+		font-family: "Fira Code";
+		font-size: 11pt;
+		font-weight: 500;
+		border: solid 1pt;
+		white-space: pre-wrap;
+	}
+
+	h1,
+	h2,
+	h3,
+	#queries > li::before {
+		font-weight: 500;
+	}
+
+	ol#queries {
+		list-style: none;
+		counter-reset: counter;
+		margin: 0;
+	}
+
+	#queries li {
+		counter-increment: counter;
+	}
+
+	h3 {
+		margin: 0;
+		display: inline-block;
+	}
+
+	h3,
+	#queries li::before {
+		font-size: 20px;
+		line-height: 2rem;
+		margin-bottom: 0.4em;
+	}
+
+	#queries li::before {
+		content: counter(counter) ".";
+		display: inline-block;
+		text-align: center;
+	}
+
+	q {
+		display: block;
+	}
+
+	img {
+		max-width: 100%;
+		max-height: 500px;
+		margin: auto;
+		align-self: center;
+	}
+
+	div,
+	#queries li {
+		page-break-inside: avoid;
+	}
+
+	th,
+	td {
+		text-align: left;
+		padding-left: 1em;
+		padding-right: 1em;
+		vertical-align: top;
+		border: 1pt solid;
+	}
+
+	td:first-child {
+		text-align: center;
+		font-weight: 500;
+	}
+
+	table {
+		font-size: 11pt;
+		border-collapse: collapse;
+	}
+
+	q::before {
+		content: "";
+	}
+
+	q::after {
+		content: ":";
 	}
 </style>
