--- a/src/components/Query.astro
+++ b/src/components/Query.astro
@@ -1,5 +1,5 @@
 ---
-interface Props {
+type Props = {
   code: string;
   verbose: string;
   ra?: string;
@@ -15,3 +15,51 @@ const { code, ra, sql, verbose } = Astro.props;
   {ra ? <pre class="ra">{ra}</pre> : null}
   <pre class="sql">{sql}</pre>
 </li>
+
+<style>
+  h3,
+  li::before {
+    font-size: 20px;
+    line-height: 2rem;
+    margin-bottom: 0.4em;
+  }
+
+  li::before {
+    content: counter(counter) ".";
+    display: inline-block;
+    text-align: center;
+    font-weight: 600;
+  }
+  li::marker {
+    content: "";
+  }
+
+  h3 {
+    margin: 0;
+    display: inline-block;
+  }
+
+  q {
+    display: block;
+  }
+
+  li {
+    counter-increment: counter;
+  }
+  q::before {
+    content: "";
+  }
+
+  q::after {
+    content: ":";
+  }
+  pre {
+    background-color: #ededed;
+    padding: 0.6em;
+    font-family: "Fira Code", monospace;
+    font-size: 11pt;
+    font-weight: 600;
+    border: solid 1pt;
+    white-space: pre-wrap;
+  }
+</style>
