--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,14 @@ import Query from "@components/Query.astro";
 import queries from "@content/data/queries.yml";
 import conceptual from "../images/conceptual_schema.png";
 import relational from "../images/relational_schema.jpg";
+import creation from "@content/data/create.yml";
+import CodeSnippet from "@components/CodeSnippet.astro";
+
+console.log(creation)
 ---
 
 <Layout>
-	<main>
+	<main slot="main">
 		<h1>Ochrana živočichů</h1>
 		<div>
 			<h2>Popis</h2>
@@ -34,19 +38,19 @@ import relational from "../images/relational_schema.jpg";
 		</div>
 		<div>
 			<h2>Konceptuální schéma</h2>
-			<img alt="Conceptual schema of database" src={conceptual.src} />
+			<img loading="lazy" alt="Conceptual schema of database" src={conceptual.src} />
 		</div>
 		<div>
 			<strong>V diagramu jsou dvě smyčky:</strong>
 			<ul>
 				<li>
-					<strong>Zaměstnanec-Zaměstnanec:</strong> To představuje vztah
-					nadřízeného a podřízeného. Může nastat situace, kdy zaměstnanec je
-					svým vlastním nadřízeným. Abychom toto řešili, zavádíme IO2.
+					<strong>Zaměstnanec-Zaměstnanec:</strong>
+					To představuje vztah nadřízeného a podřízeného. Může nastat situace,
+					kdy zaměstnanec je svým vlastním nadřízeným.
 				</li>
 				<li>
-					<strong>Zaměstnanec-Průvodce-Akce-Zákazník-Adresa-Zaměstnanec:</strong
-					> Tato smyčka zahrnuje zaměstnance a zákazníka, kteří se současně
+					<strong>Zaměstnanec-Průvodce-Akce-Zákazník-Adresa-Zaměstnanec:</strong>
+					Tato smyčka zahrnuje zaměstnance a zákazníka, kteří se současně
 					účastní (nebo neúčastní) akce a mají také nějakou adresu. To není
 					problém, protože se jedná o odlišné vazby.
 				</li>
@@ -54,7 +58,11 @@ import relational from "../images/relational_schema.jpg";
 		</div>
 		<div>
 			<h2>Relační schéma</h2>
-			<img alt="Relational schema of database" src={relational.src} />
+			<img loading="lazy" alt="Relational schema of database" src={relational.src} />
+		</div>
+		<div>
+			<h2>Tabulkové Schéma</h2>
+			<CodeSnippet snippet={creation}/>
 		</div>
 		<h2>Dotazy</h2>
 		<ol id="queries">
