--- a/src/components/CodeSnippet.astro
+++ b/src/components/CodeSnippet.astro
@@ -1,21 +1,52 @@
 ---
+import hljs from "highlight.js";
 type Props = {
   snippet: string;
+  lang: string;
 };
-const { snippet, ...elementProps } = Astro.props;
+const { snippet, lang, ...elementProps } = Astro.props;
 ---
 
-<pre {...elementProps}>{snippet}</pre>
-
+<div class="snippet">
+  {
+    lang ? (
+      <div class="header">
+        <span>{lang}</span>
+      </div>
+    ) : null
+  }
+  <pre class="language-sql" {...elementProps} set:html={hljs.highlight(snippet, {language: lang}).value}/>
+</div>
 <style>
+  div.snippet {
+    margin-top: 0.4em;
+  }
+
   pre {
-    background-color: #ededed;
-    padding: 0.6em;
+    border-bottom-left-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
+
+    background-color: rgb(39, 40, 34);
+    padding: 0.8em;
     font-family: "Fira Code", monospace;
     font-size: 10pt;
-    font-weight: 550;
-    border: solid 1pt;
+    font-weight: 600;
     white-space: pre-wrap;
-    margin-top: 0.2em;
+    margin: 0;
+    color: rgb(221, 221, 221);
+
+  }
+  div.header {
+    padding: 0.2rem;
+    padding-right: 0.6rem;
+    border-top-left-radius: 0.4rem;
+    border-top-right-radius: 0.4rem;
+    margin: 0;
+    border-bottom: 1px solid;
+    background-color: rgb(56, 57, 49);
+    color: rgb(221, 221, 221);
+  }
+  span {
+    text-align: right;
   }
 </style>
